--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,8 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           start: npm run allTests
+    export-report:
+      steps:
       - name: Export Report
         uses: actions/upload-artifact@v3
         with:
