--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,11 +14,10 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           start: npm run allTests
-    export-report:
-      steps:
-      - name: Export Report
-        uses: actions/upload-artifact@v3
-        with:
-          name: cypress-mochawesome-reporter
-          path: cypress/reports/index.html
-          retention-days: 5
+  report:
+    - name: 'Upload Artifact'
+    uses: actions/upload-artifact@v3
+    with:
+      name: Cypress Report
+      path: cypress/reports/index.html
+      retention-days: 5
