--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -14,6 +14,12 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           start: npm run allTests
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: cypress/reports/index.html
+          retention-days: 5
 
 
 
