--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,9 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Linting
-        uses: cypress-io/github-action@v4
-        with:
-          start: npm run linting
+      - run: npm run linting
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
