--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -8,6 +8,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Linting
+        uses: actions/checkout@v2
       - run: npm run linting
       - name: Cypress run
         uses: cypress-io/github-action@v4
