--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,10 +5,9 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
       - name: Linting
         uses: actions/checkout@v2
+      - run: npm install
       - run: npm run linting
       - name: Cypress run
         uses: cypress-io/github-action@v4
