--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,7 @@ jobs:
   cypress-run:
     runs-on: ubuntu-latest
     steps:
-      - name: Linting
+      - name: Checkout
         uses: actions/checkout@v2
       - run: npm install
       - run: npm run linting
