--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Install dependencies
       - run: npm install
+      - name: Run linting
       - run: npm run linting
       - name: Cypress run
         uses: cypress-io/github-action@v4
