--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,5 +1,5 @@
-name: Cypress Tests
-'on':
+name: Cypress Test Run
+"on":
   - push
 jobs:
   cypress-run:
@@ -7,9 +7,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install dependencies
       - run: npm install
-      - name: Run linting
       - run: npm run linting
       - name: Cypress run
         uses: cypress-io/github-action@v4
