--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "type": "git",
     "url": "git+https://github.com/MichaelRobsonSliide/cypress-template.git"
   },
-  "author": "Michael Robson",
+  "author": "Michael Robson <michael.r@sliide.com>",
   "license": "MIT",
   "devDependencies": {
     "cypress": "^10.1.0",
